# LQVM

./: CMakeLists.txt  README.md
docs/: ABC.md
include/: bc_builder.hpp  bits_manipulation.hpp  common.hpp  lqvm.hpp  opcodes.hpp
include/bytecode/: builder.hpp  bytecode.hpp  function.hpp  opcodes.hpp
include/utils/: bits_manipulation.hpp  common.hpp
src/: function.cpp  lqvm.cpp  main.cpp
